--- a/src/Components/Account/Account.css
+++ b/src/Components/Account/Account.css
@@ -14,6 +14,19 @@
     overflow-y: auto;
 }
 
+.cms-semester-dates-account{
+    padding: 1em;
+    background-color: var(--light-blue);
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    justify-content: center;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    flex-shrink: 0;
+}
+
 /* USER INFO */
 .hrb{
     width: 100%;
