--- a/src/Pages/Modules/Modules.css
+++ b/src/Pages/Modules/Modules.css
@@ -27,6 +27,20 @@
     object-position: center;
 }
 
+.cms-modules-select-all{
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    gap: 1em;
+
+}
+.cms-select-all-modules-btn{
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+
+}
+
 /* MAIN CLASS MODULES */
 
 .class-modules-container{
