--- a/src/Pages/Timetable/Timetable.css
+++ b/src/Pages/Timetable/Timetable.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .cms-timetable-days{
     margin-top: 2em;
     display: grid;
@@ -6,6 +6,7 @@
     grid-template-rows: minmax(40px, auto);
     background-color: var(--feint-blue);
     padding: 2em;
+    font-family: 'Poppins', sans-serif;
 }
 .cms-timetable-day{
     background-color: var(--dark-blue);
@@ -15,6 +16,8 @@
     justify-content: center;
     padding-left: 1em;
     color: rgba(255, 255, 255, 0.859);
+    letter-spacing: 1px;
+    
 }
 .cms-timetable-mon{
     grid-column: 1 / 2;
@@ -54,13 +57,16 @@
 .cms-timetable-fri{
     grid-column: 5 / 5;
 }
+.cms-timetable-code{
+    color: var(--dark-blue);
+}
 
 .cms-timetable-mon-cls{
     padding: 1em;
     background-color: white;
     display: flex;
     flex-direction: column;
-    gap: .8em;
+    gap: .5em;
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.242);
 }
@@ -70,6 +76,12 @@
     background-color: var(--light-blue);
     transition: .5s ease-in-out;
     color: rgba(255, 255, 255, 0.802);
+}
+
+.cms-timetable-mon-cls:hover .cms-timetable-code,
+.cms-timetable-mon-cls:focus .cms-timetable-code{
+    transition: .5s ease-in-out;
+    color: white;
 }
 
 
